syntax = "proto3";

option csharp_namespace = "Soit.System.Protos";

package Soit.System;

enum EntityStates {
   ENABLE = 0;
   DISABLE = 1;
}

enum ElementTypes {
   BUTTON = 0;
   MENU = 1;
}

message Identify {
  int64 id = 1;
}

message IdentifyArray {
  repeated int64 ids = 1;
}

message NamedIdentify {
  int64 id = 1;
  string name = 2;
}

message OrderRequest {
  string order_by = 1;
  bool descending = 2;
}

message PageRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message PageResult {
  int32 page = 1;
  int32 page_size = 2;
  int32 page_count = 3;
  int32 row_count = 4;
  int32 first_row = 5;
  int32 last_row = 6;
}
